Get up-to-speed with hxlc build and publish
* Introduce dependency on f-spec package
* Get working hxlc rad

--- a/dotnet/src/hxlc/hxlc.csproj
+++ b/dotnet/src/hxlc/hxlc.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../../Build.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>hxlc</RootNamespace>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <RootNamespace>Hxlc</RootNamespace>
     <OutputType>Exe</OutputType>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <Copyright>Copyright 2010-2019 Carbonfrost Systems, Inc.</Copyright>
