Improvements to `hxlc`
* Bug fix: allow `/` to start file names in command line arguments
* Implement an installer in Makefile
* Make templates types default to public types in tools
* Remove `--no-logo`
* Improve usage descriptions

--- a/dotnet/src/hxlc/Automation/SR.properties
+++ b/dotnet/src/hxlc/Automation/SR.properties
@@ -1,13 +1,12 @@
-UBaseType=Use the given base type for generated templates
+UBaseType=Use the given base {{CLASS}} for generated templates
 UDebug=Display additional debug information
-UDefine=Define a property value
+UDefine=Define a {{0:PROPERTY}} with the given {{1:VALUE}}
 UHelp=Display this help screen
-UInclude=Include all files matching the given pattern, or if a directory, all source files within the directory and its subdirectories
-UNamespace=Map an XML prefix to a namespace when resolving types
+UInclude=Include all files matching the given {{PATTERN}}, or if a directory, all source files within the directory and its subdirectories
+UNamespace=Map an XML {{0:PREFIX}} to a {{1:NAMESPACE}} when resolving types
 UNoCompile=Don't compile an assembly - just generate source files
-UNoLogo=Suppress the copyright information
-UOut=An output path where the assembly file will be written -or- the directory if --no-compile is specified
-UReference=Reference metadata from the assembly file
+UOut=An output path where the assembly {{PATH}} will be written -or- the directory if --no-compile is specified
+UReference=Add the given assembly {{FILE}} as a reference
 UVerbose=Specify verbose output
 UVerbose2=Specify verbose output (more detailed)
 UVerbose3=Specify verbose output (most detailed)
