WIP: Compiler internal re-work
* Drop IHxlCompilerProcessor.Optimize since it was unused
* Re-group `DomConverter` logic into own preprocessor

  * Refactor the preprocess to work in-place instead of creating a new document
  * Access implicit type and assembly references via a service

--- a/dotnet/src/Carbonfrost.Commons.Hxl/Automation/SR.properties
+++ b/dotnet/src/Carbonfrost.Commons.Hxl/Automation/SR.properties
@@ -18,5 +18,5 @@ NotValidVariableName=Not a valid name for a variable: ${varName}
 PrefixAlreadyDefined=Prefix has already been defined: ${prefix}
 PrefixDoesNotMapToNamespace=Prefix does not map to a namespace: ${prefix}
 ServerAttributeCannotBeCreated=Attribute `${name}': No type could be found for the server attribute.
-ServerAttributePropertyNotFound=Server attribute `${type}' does not define a matching property `${property}'.
+ServerAttributePropertyNotFound=Server attribute `${type}' does not define a public matching property `${property}'.
 ServerElementCannotBeCreated=Element `${name}': No type could be found for the server element.
