--- a/.github/workflows/dotnetcore_release.yml
+++ b/.github/workflows/dotnetcore_release.yml
@@ -8,9 +8,11 @@ on:
 env:
   NUGET_UPLOAD_URL: https://nuget.pkg.github.com/carbonfrost/
   NUGET_SOURCE_URL: https://nuget.pkg.github.com/carbonfrost/index.json
+  NUGET_SOURCE_NAME: Carbonfrost
   NUGET_USER_NAME: ${{ github.actor }}
   NUGET_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
   NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  VERBOSE: 1
 
 jobs:
   publish:
@@ -27,9 +29,6 @@ jobs:
       with:
        nuget-version: latest
 
-    - name: Check release requirements
-      run: make release/requirements
-
     - name: Configure dotnet and NuGet
       run: make dotnet/configure
 
@@ -41,6 +40,9 @@ jobs:
 
     - name: Pack with dotnet
       run: make -- -dotnet/pack
+
+    - name: Check release requirements
+      run: make release/requirements
 
     - name: Publish the package to GitHub Package Repository
       run: make -- -dotnet/push
