--- a/dotnet/src/Carbonfrost.Commons.Hxl/Carbonfrost.Commons.Hxl.csproj
+++ b/dotnet/src/Carbonfrost.Commons.Hxl/Carbonfrost.Commons.Hxl.csproj
@@ -13,6 +13,8 @@
     <RepositoryUrl>https://github.com/Carbonfrost/f-hxl</RepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <!-- Ship symbols with package because it has the best compatibility -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
 
   <ItemGroup>
