--- a/dotnet/src/hxlc/hxlc.csproj
+++ b/dotnet/src/hxlc/hxlc.csproj
@@ -15,6 +15,8 @@
     <PackAsTool>true</PackAsTool>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <!-- Ship symbols with package because it has the best compatibility -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
 
   <ItemGroup>
